log
Thu 05 Oct 2023 06:22:38 PM UTC: 
 tests:  0|5
total_score: 0/70
a1cfda7
Thu 05 Oct 2023 06:34:46 PM UTC: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:56:27: error: expected ‘)’ before numeric constant
   56 |     for (i = 0; i < 9; i++0){
      |         ~                 ^
      |                           )
Compilation failed
2e9f738
Thu 05 Oct 2023 06:34:56 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
199b9bc
Thu 05 Oct 2023 06:38:22 PM UTC: 
 sudoku.c | 44 +++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 43 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
df55059
